Fix contrast issues with mobile menu colors.

--- a/spearhead/assets/sass/_text.scss
+++ b/spearhead/assets/sass/_text.scss
@@ -2,7 +2,7 @@
     border-bottom: 1px solid transparent;
     transition: all 0.1s ease;
 
-    &:hover:not(.wp-block-button__link) {
+    &:hover:not(.wp-block-button__link):not(.wp-block-file__button) {
         color: var( --global--color-primary-hover );
         border-bottom: 1px solid var( --global--color-primary-hover );
     }
@@ -14,6 +14,6 @@
     border-color: var( --global--color-primary ); // Links inside the post content must be underlined.
 
     &:hover:not(.wp-block-button__link) {
-        border-bottom: 1px solid transparent;
+        border-color: transparent;
     }
 }
